apps/base/media/overseerr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: overseerr
  name: overseerr
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: overseerr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: overseerr
    spec:
      nodeSelector:
        nodeclass: general
      containers:
        - env:
            - name: TZ
              value: America/Denver
          image: linuxserver/overseerr:latest
          name: overseerr
          ports:
            - containerPort: 6767
              name: http
              protocol: TCP
          volumeMounts:
            - mountPath: /config
              name: overseerr-config
      volumes:
        - name: overseerr-config
          persistentVolumeClaim:
            claimName: overseerr-config
