apps/base/media/overseerr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: overseerr
  labels:
    app: overseerr
spec:
  selector:
    app: overseerr
  ports:
    - name: http
      port: 5055
      protocol: TCP
      targetPort: http
